# duckgame-web

./: .gitignore  LICENSE.md  README.md  bun.lockb  index.html  package.json  tailwind.config.ts
server/: Cargo.toml  client.rs  serverGameWeb.rs  signalingServer.js
server/src/: game_state.rs  main.rs  websocket.rs
src/: App.tsx  index.css
src/engine/: AnimationSystem.ts  AssetLoader.ts  Game.ts
src/maps/: MapLoader.ts  map1.json  map2.json  types.ts
src/pages/: Controls.tsx  Demo.tsx  Index.tsx  PCControls.tsx
src/scenes/: MainScene.ts
